chore: complete v1.0 milestone
Archived:
- milestones/v1.0-ROADMAP.md (full phase details, key decisions)
- milestones/v1.0-REQUIREMENTS.md (all 35 requirements shipped)
- milestones/v1-MILESTONE-AUDIT.md (100% verified)

Deleted (fresh for next milestone):
- ROADMAP.md
- REQUIREMENTS.md

Updated:
- MILESTONES.md (v1.0 entry with stats and accomplishments)
- PROJECT.md (requirements → Validated, current state, key decisions)
- STATE.md (milestone history, fresh start)

--- a/.planning/milestones/v1.0-REQUIREMENTS.md
+++ b/.planning/milestones/v1.0-REQUIREMENTS.md
@@ -1,6 +1,7 @@
 # Requirements: Eden - מערכת ניהול אחזקת מבנים
 
-**Defined:** 2026-01-19
+**Milestone:** v1.0 MVP
+**Shipped:** 2026-01-25
 **Core Value:** מנהל המבנה רואה בזמן אמת מה קורה בשטח - איזה משימה הושלמה, מי עושה מה, ומה מתעכב
 
 ## v1 Requirements
@@ -53,14 +54,14 @@
 - [x] **ML-07**: ממשק המנהל תמיד בעברית עם תרגום אוטומטי להערות מעובדים
 - [x] **ML-08**: תמיכה ב-RTL (Right-to-Left) לעברית וערבית, LTR לאנגלית ורוסית
 
-## v2 Requirements
+## Deferred to v2
 
 דרישות שנדחו לגרסה הבאה:
 
-- **RT-05**: התחברות מחדש אוטומטית ל-WebSocket במקרה של ניתוק - ייעשה בשלב מאוחר יותר
-- **TC-06**: העלאת מספר תמונות למשימה אחת - כרגע תמונה אחת מספיקה
-- **TS-09**: התרעות למנהל על משימות מאוחרות - לא בשלב ראשון
-- **HA-09**: ייצוא דוחות ל-Excel/PDF - לא בשלב ראשון
+- **RT-05**: התחברות מחדש אוטומטית ל-WebSocket במקרה של ניתוק
+- **TC-06**: העלאת מספר תמונות למשימה אחת
+- **TS-09**: התרעות למנהל על משימות מאוחרות
+- **HA-09**: ייצוא דוחות ל-Excel/PDF
 
 ## Out of Scope
 
@@ -115,12 +116,27 @@
 | ML-07 | Phase 5 | Complete |
 | ML-08 | Phase 5 | Complete |
 
+## Milestone Summary
+
+**Total v1 Requirements:** 35
+- Shipped: 35 (100%)
+- Adjusted: 0
+- Dropped: 0
+
 **Coverage:**
-- v1 requirements: 35 total
 - Mapped to phases: 35 (100%)
 - Completed: 35 (100%)
 - Unmapped: 0
 
+**Phases:**
+1. Real-Time Infrastructure (RT-01 to RT-04)
+2. Enhanced Task Completion (TC-01 to TC-05)
+3. Status Tracking & Timing (TS-01 to TS-08)
+4. History & Archive (HA-01 to HA-08)
+5. Multi-Language Support (ML-01 to ML-08)
+
+**All requirements shipped as defined. No scope changes or drops during milestone.**
+
 ---
-*Requirements defined: 2026-01-19*
-*Last updated: 2026-01-25 after Phase 5 completion*
+*Archived: 2026-01-25*
+*For current requirements, see .planning/REQUIREMENTS.md in next milestone*
