fix(03): revise plans based on checker feedback
Addressed 3 blockers:
- MOB-GRID-07: Added timeline horizontal scroll to Plan 02 Task 1
- Plan 03 Task 2: Added nav item min-height verification
- Plan 03 Task 3: Added native select verification

Optional improvements:
- Plan 01 Task 3: Added navItems extraction verification
- Plan 02 must_haves: Reframed truth to be user-observable

--- a/.planning/phases/03-mobile-responsive-experience/03-01-PLAN.md
+++ b/.planning/phases/03-mobile-responsive-experience/03-01-PLAN.md
@@ -219,6 +219,7 @@ Modify client/src/App.jsx:
    - Extract navigation items from Sidebar.jsx: "היום שלי", "כל המשימות", "היסטוריה", "מערכות", "ספקים", "עובדים", "מיקומים", "הגדרות"
    - Create navItems array with { path, label, icon } objects
    - Import icons: FaHome, FaTasks, FaHistory, FaCog, FaTools, FaTruck, FaUsers, FaMapMarkerAlt (check Sidebar.jsx for exact icons)
+   - Verification: Use `grep "NavLink" client/src/components/layout/Sidebar.jsx` to extract exact paths and labels
 
 4. Conditional rendering (modify existing layout):
    - Desktop (isDesktop): show <Sidebar className="hidden lg:block" />
@@ -238,6 +239,7 @@ NO semicolons in client code.
 - App.jsx imports MobileDrawer, HamburgerButton, useMediaQuery
 - App.jsx has drawerOpen state and isMobile/isDesktop breakpoint detection
 - navItems array constructed with all navigation paths
+- Verification: Run `grep "NavLink" client/src/components/layout/Sidebar.jsx` to confirm nav items match
 - Conditional rendering: Sidebar shows on desktop (lg:block), hamburger shows on mobile (lg:hidden)
 - Route change effect closes drawer
   </verify>
