--- a/.planning/phases/03-mobile-responsive-experience/03-03-PLAN.md
+++ b/.planning/phases/03-mobile-responsive-experience/03-03-PLAN.md
@@ -159,10 +159,11 @@ NO semicolons.
 Apply touch optimizations to navigation and modal components:
 
 **MobileDrawer.jsx:**
-- Close button (FaTimes): Already has min-h-[44px] min-w-[44px] from Plan 01, verify present
-- Navigation items: Already have min-height through padding, verify each NavLink has adequate tap target
-- If navigation items lack explicit min-height, add: `min-h-[44px]` to NavLink className
+- Close button (FaTimes): Already has proper sizing from Plan 01, verify present
+- Navigation items: Verify each NavLink has adequate tap target
+- Add explicit sizing if missing: `min-h-[44px]` to NavLink className
 - Verify gap between nav items: should be `space-y-2` (8px vertical spacing)
+- Navigation items already defined in Plan 01 with adequate padding, but ensure explicit min-height present
 
 **HamburgerButton.jsx:**
 - Already has min-h-[44px] min-w-[44px] from Plan 01, verify present
@@ -197,6 +198,7 @@ NO semicolons.
   <verify>
 - MobileDrawer close button has 44x44px size
 - MobileDrawer nav items have adequate tap targets (min-h-[44px])
+- Run: `grep "min-h-\[44px\]" "client/src/components/layout/MobileDrawer.jsx"` - should find nav items with min-height
 - Modal close button has 44x44px size with active feedback
 - FAB has 56x56px size (MOB-TOUCH-06 standard)
 - All buttons have flex centering and active: states
@@ -246,6 +248,7 @@ Apply touch optimizations to all form and page buttons:
 - Verify no custom dropdown components are used that might not work on mobile
 - If custom dropdowns exist: Ensure they render as native <select> on mobile breakpoints
 - Native selects work better on mobile (OS-native picker UI)
+- Verification check: Run `grep "<select" client/src/components/forms/*.jsx` to confirm native selects used
 
 **Page action buttons (MyDayPage, AllTasksPage, HistoryPage):**
 - "שלח הכל" button (Send All - MyDayPage)
@@ -274,7 +277,7 @@ NO semicolons.
 - Form submit/cancel buttons have active:scale-95 feedback
 - All input fields have min-h-[44px]
 - Textareas have min-h-[88px]
-- Dropdowns use native <select> elements (not custom components)
+- Verify native select usage: Run `grep "<select" client/src/components/forms/*.jsx` - should find native select elements
 - Page action buttons (Send All, filters, sorts) have 44px heights
 - Icon buttons are 44x44px square, text buttons are 44px height
   </verify>
