--- a/.planning/phases/03-mobile-responsive-experience/03-02-PLAN.md
+++ b/.planning/phases/03-mobile-responsive-experience/03-02-PLAN.md
@@ -21,7 +21,7 @@ must_haves:
     - "Stats bar shows 2x2 grid on mobile instead of 1x4"
     - "All list pages show single-column layout on mobile"
     - "Modals display full-screen on mobile, centered card on desktop"
-    - "Resizable columns hide on mobile, stack vertically automatically"
+    - "Manager can view timeline chart with horizontal scrolling on mobile"
   artifacts:
     - path: "client/src/pages/MyDayPage.jsx"
       provides: "Responsive stats bar (grid-cols-2 mobile, grid-cols-4 desktop) and stacked columns"
@@ -82,6 +82,16 @@ Read client/src/pages/MyDayPage.jsx and apply mobile-first responsive transforma
 - Desktop (md: = 768px+): 1x4 grid (all 4 stats in one row)
 - Research reference: Example 4 demonstrates this exact transformation
 
+**Timeline chart horizontal scroll (MOB-GRID-07):**
+- Find the timeline chart section (lines 677-731: "משימות לשבוע הקרוב")
+- The chart container currently has: `flex items-end justify-between gap-2`
+- Mobile adaptation needed: Add horizontal scroll capability
+- Wrap the flex container in an outer div with: `overflow-x-auto -mx-4 px-4`
+- Keep existing flex layout: `flex items-end justify-between gap-2 h-40 pt-4`
+- Mobile view: Timeline bars scroll horizontally if needed
+- Desktop view: Timeline fits naturally without scroll
+- Add `min-w-[60px]` to each day bar to ensure adequate tap target and readability
+
 **Main columns layout (MOB-GRID-01, MOB-GRID-02):**
 - Find the resizable columns container (uses re-resizable with flex)
 - The existing lg:hidden and lg:flex patterns already handle desktop (>=1024px)
@@ -103,13 +113,16 @@ NO semicolons (Eden client convention).
   </action>
   <verify>
 - Stats grid uses `grid-cols-2 md:grid-cols-4` pattern
+- Timeline chart container wrapped with `overflow-x-auto -mx-4 px-4`
+- Each timeline day bar has `min-w-[60px]` for readability
 - Mobile layout (<1024px) shows stacked columns (flex-col)
 - Desktop layout (>=1024px) shows resizable horizontal columns
-- No horizontal scrolling on mobile viewports
+- No horizontal scrolling on mobile viewports (except timeline chart)
 - Re-resizable components only render on lg: breakpoint
   </verify>
   <done>
 - MyDayPage stats bar displays 2x2 on mobile, 1x4 on desktop (MOB-GRID-03 complete)
+- Timeline chart scrolls horizontally on mobile (MOB-GRID-07 complete)
 - Task columns stack vertically on mobile (MOB-GRID-01, MOB-GRID-02 complete)
 - Resizable divider hidden on mobile, visible on desktop
 - All content fits within 320px mobile viewport without scrolling
@@ -249,16 +262,18 @@ Overall phase checks after all tasks complete:
 
 **Mobile layout verification (320px - 767px):**
 1. MyDayPage: Stats bar shows 2x2 grid, columns stack vertically
-2. AllTasksPage: Tasks in single column
-3. HistoryPage: History items in single column
-4. SystemsPage/SuppliersPage/EmployeesPage/LocationsPage: Entity cards in single column
-5. Modal: Full-screen takeover with compact padding
-6. No horizontal scrolling on any page at 320px viewport
+2. MyDayPage: Timeline chart scrolls horizontally with adequate bar width
+3. AllTasksPage: Tasks in single column
+4. HistoryPage: History items in single column
+5. SystemsPage/SuppliersPage/EmployeesPage/LocationsPage: Entity cards in single column
+6. Modal: Full-screen takeover with compact padding
+7. No horizontal scrolling on any page at 320px viewport (except timeline chart scroll container)
 
 **Tablet layout verification (768px - 1023px):**
 1. MyDayPage: Stats bar shows 1x4 grid, columns still stacked (resizable only at 1024px+)
-2. All list pages: 2-column grids
-3. Modal: Centered card with rounded corners
+2. MyDayPage: Timeline chart fits without scroll
+3. All list pages: 2-column grids
+4. Modal: Centered card with rounded corners
 
 **Desktop layout verification (1024px+):**
 1. MyDayPage: Stats bar 1x4, resizable columns visible
@@ -270,6 +285,7 @@ Overall phase checks after all tasks complete:
 - No layout breaks or jumps
 - All content remains readable and accessible
 - Grid columns add progressively (1 → 2 → 3, never 1 → 4)
+- Timeline chart scrolls smoothly on mobile
 </verification>
 
 <success_criteria>
@@ -280,14 +296,16 @@ Overall phase checks after all tasks complete:
 4. All list pages (Systems, Suppliers, Employees, Locations) show single column on mobile (MOB-GRID-06 complete)
 5. Modals are full-screen on mobile, centered card on desktop (MOB-GRID-05 complete)
 6. Resizable columns hide on mobile (<1024px), show on desktop (MOB-GRID-02 complete via existing re-resizable lg: pattern)
+7. Timeline chart on MyDayPage scrolls horizontally on mobile (MOB-GRID-07 complete)
 
 **Measurable outcomes:**
 - 8 files modified (7 pages + Modal)
 - All grids use mobile-first responsive pattern (unprefixed = mobile)
 - No grid exceeds 3 columns even on widest screens
-- No horizontal scrolling at 320px viewport width
+- No horizontal scrolling at 320px viewport width (except intentional timeline scroll)
 - Stats bar adapts from 2x2 to 1x4 at md: breakpoint (768px)
 - Modal transforms from full-screen to card at md: breakpoint (768px)
+- Timeline chart has horizontal scroll with min-w-[60px] bars
 </success_criteria>
 
 <output>
@@ -298,5 +316,6 @@ Include:
 - Breakpoint strategy (mobile-first: unprefixed, md:, lg:)
 - Grid column counts per breakpoint
 - Modal dimensions per breakpoint
+- Timeline chart scroll implementation details
 - Any layout issues discovered during transformation
 </output>
