fix: escape single quotes in i18n strings to prevent JS syntax errors
The acknowledgeRequired string contained single quotes that broke
JavaScript alert() calls in the task confirmation page.

--- a/src/locales/en/tasks.json
+++ b/src/locales/en/tasks.json
@@ -3,7 +3,7 @@
   "greeting": "Hello {{name}}",
   "acknowledgeButton": "Acknowledge Receipt of All Tasks",
   "acknowledgeDescription": "Clicking this button confirms you received all tasks and will notify the manager",
-  "acknowledgeRequired": "Please click the 'Acknowledge Receipt of All Tasks' button first before completing individual tasks",
+  "acknowledgeRequired": "Please click the \"Acknowledge Receipt of All Tasks\" button first before completing individual tasks",
   "completeButton": "Submit Completion",
   "addNoteLabel": "Notes (optional)",
   "addNotePlaceholder": "Add notes about the task...",
