--- a/src/locales/ru/tasks.json
+++ b/src/locales/ru/tasks.json
@@ -3,7 +3,7 @@
   "greeting": "Привет {{name}}",
   "acknowledgeButton": "Подтвердить получение всех задач",
   "acknowledgeDescription": "Нажатие этой кнопки подтвердит, что вы получили все задачи и уведомит менеджера",
-  "acknowledgeRequired": "Сначала нажмите кнопку 'Подтвердить получение всех задач', прежде чем выполнять отдельные задачи",
+  "acknowledgeRequired": "Сначала нажмите кнопку «Подтвердить получение всех задач», прежде чем выполнять отдельные задачи",
   "completeButton": "Отправить выполнение",
   "addNoteLabel": "Примечания (необязательно)",
   "addNotePlaceholder": "Добавьте примечания к задаче...",
