fix: no-time tasks WA translation + pending approval expandable with photos/notes

--- a/src/locales/ar/whatsapp.json
+++ b/src/locales/ar/whatsapp.json
@@ -3,5 +3,6 @@
   "taskListHeader": "مهام {{date}}",
   "time": "الوقت",
   "description": "الوصف",
-  "clickToView": "انقر على الرابط أدناه للعرض والتأكيد"
+  "clickToView": "انقر على الرابط أدناه للعرض والتأكيد",
+  "extraTasksHeader": "📋 مهام إضافية:"
 }
