--- a/src/locales/ru/whatsapp.json
+++ b/src/locales/ru/whatsapp.json
@@ -3,5 +3,6 @@
   "taskListHeader": "Задачи на {{date}}",
   "time": "Время",
   "description": "Описание",
-  "clickToView": "Нажмите на ссылку ниже для просмотра и подтверждения"
+  "clickToView": "Нажмите на ссылку ниже для просмотра и подтверждения",
+  "extraTasksHeader": "📋 Дополнительные задачи:"
 }
